fix colors in dark and contrast mode

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/version-selector.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/version-selector.less
@@ -83,7 +83,7 @@
         text-decoration: none;
 
         &:hover {
-          color: var(--primary-color);
+          text-decoration: none;
         }
       }
     }
